TEST_PROGRAMS/VALID/02/vardecls.go
package main

func main(){
    var x int;
    var y = 43
    var z int = 5

}
