TEST_PROGRAMS/INVALID/04/86.go
package main

func main() {
    var (x = 2 y = 3;)
}
